Protect ether_multi list

PR 54153